# mcandump

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
man/: mcandump.1
src/: main.rs
