[package]
name = "mcandump"
version = "2.1.0"
edition = "2021"
rust-version = "1.70"
description = "CAN bus logger proxy — forwards SocketCAN traffic to CANcorder via ECUconnect Logger protocol"
license = "MIT"
authors = ["Dr. Michael 'Mickey' Lauer <mickey@vanille-media.de>"]
repository = "https://github.com/mickeyl/mcandump"
readme = "README.md"
keywords = ["can", "canbus", "socketcan", "logging", "canfd"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
libc = "0.2"
mdns-sd = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
