[package]
name = "mcandump"
version = "2.6.0"
edition = "2021"
rust-version = "1.94"
description = "Enhanced candump for SocketCAN — rich colors, interactive scrollback/search, auto theme detection. Optional CANcorder logger."
license = "MIT"
authors = ["Dr. Michael 'Mickey' Lauer <mickey@vanille-media.de>"]
repository = "https://github.com/mickeyl/mcandump"
readme = "README.md"
keywords = ["can", "canbus", "socketcan", "logging", "canfd"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
mdns-sd = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
